--- a/src/app/fullpost/fullpost.component.html
+++ b/src/app/fullpost/fullpost.component.html
@@ -1,13 +1,19 @@
 <p>
   Fullpost works!
 </p>
-<a style="float:left" href="./app.component.html">
-  <b>&lArr;</b>
-</a>
-<div class="name">
-  <h2>{{Name}}</h2>
-</div><br/>
-<div class="nav">
-  <h1>{{title}}</h1>
-  <button style="float:right" ng-click="./all-posts/all-posts.component">All-Posts</button>
+<div class="main">
+  <a style="float:left" href="./app.component.html">
+    <b>&lArr;</b>
+  </a>
+  <div class="name">
+    <h2>{{Name}}</h2>
+  </div>
+  <div class="nav">
+    <h1 style="float:left">{{title}}</h1>
+    <button style="float:right" onClick="showAllPosts()">All-Posts</button>
+  </div>
+  <div class = "post"></div>
+  <div class = "comments">
+
+  </div>
 </div>
