--- a/src/app/all-posts/all-posts.component.html
+++ b/src/app/all-posts/all-posts.component.html
@@ -1,8 +1,8 @@
 <div id="header">
-  <h1 id="author_name">{{Name}}</h1>
-</div>
-<div id="list">
-  <ol>
-    <li *ngFor="let i of posts" id="lists">{{i}}</li>
-  </ol>
-</div>
+    <h2>Name Of Author</h2>
+  </div>
+  <mat-card *ngFor="let data of httpdata">
+    <h3 id="title">{{data.id}}  {{data.title}}</h3>
+  </mat-card>
+  
+  <router-outlet></router-outlet>
