--- a/src/app/fullpost/fullpost.component.html
+++ b/src/app/fullpost/fullpost.component.html
@@ -1,18 +1,25 @@
-<p>
-  Fullpost works!
-</p>
-<form>
-  <a style="float:left" routerLink="/app-root" routerLinkActive="active">
-    <b>&lArr;</b>
-  </a>
-    <div class="nav">
-      <h2>{{Name}}</h2>
-      <h1 >{{title}}</h1>
-      <button style="float:right" routerLink="/all-posts" routerLinkActive="active">All-Posts</button>
+<div id="header">
+<h2 id="name">Author Name</h2>
+  </div>
+    <div class="container">
+      <form>
+          <div class="row">
+              <label id="posttitle">POST TITLE</label>
+              <button class="button button2">ALL POST</button>
+            </div>
+        <div class="row">
+          <div class="col-25">
+            <label for="post">Post</label>
+          </div>
+          <div class="col-75">
+            <textarea id="post" name="post" placeholder="Write something.." style="height:200px"></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <input type="submit" value="COMMENT">
+        </div>
+      </form>
     </div>
-      <p>Post Body</p>
-      <button>Comments</button>
-
-
-
-</form>
+   
+    
+  
