home.component.ts and data.services

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,6 @@
   <button class="button button2">ALL AUTHOR</button>
 </div>
 <mat-card *ngFor="let data of httpdata">
-  <h3 id="title" [routerLink]="['/fullpost']">{{data.id}} {{data.title}}</h3>
-  <p id="name">name</p>
+  <h3 id="title" (click)="dataToBeTransferred()" [routerLink]="['/fullpost']">{{data.id}} {{data.title}}</h3>
+  <p id="name">{{data.name}}</p>
 </mat-card>
