--- a/src/app/all-posts/all-posts.component.html
+++ b/src/app/all-posts/all-posts.component.html
@@ -3,6 +3,6 @@
 </div>
 <div id="list">
   <ol>
-    <li *ngFor="let i of posts" id="lists">{{i}}</li>
+    <li *ngFor="let i of posts" id="lists" [routerLink]="['/fullpost']">{{i}}</li>
   </ol>
 </div>
