--- a/src/app/createauthor/createauthor.component.html
+++ b/src/app/createauthor/createauthor.component.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <form>
     <div class="row">
@@ -6,15 +5,9 @@
         <label for="name">Name</label>
       </div>
       <div class="col-75">
-        <select id="name" name="name">
-          <option>Shalini</option>
-          <option>Tiwari</option>
-        </select>
+          <input type="text" id="name" name="name" placeholder="Your Name..">
+        </div>
       </div>
-      <div class="col-65">
-        <input type="submit" value="NEW USER" [routerLink]="['/app-createauthor']">
-      </div>
-    </div>
     <div class="row">
       <div class="col-25">
         <label for="title">Title</label>
