--- a/src/app/createauthor/createauthor.component.css
+++ b/src/app/createauthor/createauthor.component.css
@@ -50,23 +50,14 @@ input[type=submit]:hover {
     width: 75%;
     margin-top: 10px;
 }
-.col-65 {
-    float: right;
-    margin-top: -40px;
-    margin-right: 420px;
-}
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
 @media screen and (max-width: 600px) {
-    .col-25, .col-75,.col-65 input[type=submit] {
+    .col-25, .col-75, input[type=submit] {
         width: 80%;
         margin-top: 0;
     }
-}
-#name 
-{
-    width: 50%;
 }
