--- a/src/app/fullpost/fullpost.component.html
+++ b/src/app/fullpost/fullpost.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
       <div class="col-25">
-        <label for="post">Post</label>
+        <label for="post">POST</label>
       </div>
       <div class="col-75">
         <label id="post" name="post" style="height:200px">Hiiiii</label>
