--- a/src/app/all-posts/all-posts.component.html
+++ b/src/app/all-posts/all-posts.component.html
@@ -1,7 +1,37 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-    <h2>Name Of Author</h2>
-  <mat-card *ngFor="let data of httpdata">
-    <h3 id="title">{{data.id}}  {{data.title}}</h3>
-  </mat-card>
-  
-  <router-outlet></router-outlet>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title></title>
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css" />
+
+  <!--[if IE 6]>
+<link href="default_ie6.css" rel="stylesheet" type="text/css" />
+<![endif]-->
+</head>
+
+<body>
+  <div id="wrapper">
+    <div id="header">
+      <div id="logo">
+        <h1>Author Name</h1>
+      </div>
+    </div>
+    <div id="page">
+
+      <mat-card *ngFor="let data of httpdata">
+        <h2 id="title" [routerLink]="['/fullpost']">{{data.id}}. {{data.title}}</h2>
+      </mat-card>
+
+    </div>
+    <div id="three-column">
+
+    </div>
+    <div id="footer">
+    </div>
+  </div>
+</body>
+
+</html>
