--- a/src/app/allauthor/allauthor.component.html
+++ b/src/app/allauthor/allauthor.component.html
@@ -1,3 +1,50 @@
-<mat-card *ngFor="let data of httpdata">
-  <h3 id="title" [routerLink]="['/fullpost']">{{data.id}} {{data.title}}</h3>
-</mat-card>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title></title>
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <button class="w3-button w3-xlarge w3-circle w3-teal">+</button>
+  <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css" />
+  <!--[if IE 6]>
+<link href="default_ie6.css" rel="stylesheet" type="text/css" />
+<![endif]-->
+</head>
+
+<body>
+  <div id="wrapper">
+    <div id="header">
+      <div id="logo">
+        <h1>Communication Management System</h1>
+      </div>
+      <div id="menu">
+        <ul>
+          <li>
+            <a accesskey="1" title="" [routerLink]="['/app-home']">Homepage</a>
+          </li>
+          <li>
+            <a accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
+          </li>
+          <li>
+            <a accesskey="3" title="" [routerLink]="['/app-allauthor']">AllAuthor</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div id="page">
+        <button class="addbutton" [routerLink]="['/app-createauthor']">+</button>
+      <mat-card *ngFor="let data of httpdata">
+        <h2 id="title" [routerLink]="['/fullpost']">{{data.id}}. {{data.name}}</h2>
+      </mat-card>
+
+    </div>
+    <div id="three-column">
+
+    </div>
+    <div id="footer">
+    </div>
+  </div>
+</body>
+
+</html>
