--- a/src/app/createauthor/createauthor.component.html
+++ b/src/app/createauthor/createauthor.component.html
@@ -1,32 +1,70 @@
-<div class="container">
-  <form>
-    <div class="row">
-      <div class="col-25">
-        <label for="name">Name</label>
-      </div>
-      <div class="col-75">
-          <input type="text" id="name" name="name" placeholder="Your Name..">
-        </div>
-      </div>
-    <div class="row">
-      <div class="col-25">
-        <label for="title">Title</label>
-      </div>
-      <div class="col-75">
-        <input type="text" id="title" name="title" placeholder="Your Title..">
-      </div>
-    </div>
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-    <div class="row">
-      <div class="col-25">
-        <label for="post">Post</label>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title></title>
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css" />
+
+  <!--[if IE 6]>
+<link href="default_ie6.css" rel="stylesheet" type="text/css" />
+<![endif]-->
+</head>
+
+<body>
+  <div id="wrapper">
+    <div id="header">
+      <div id="logo">
+        <h1>Communication Management System</h1>
       </div>
-      <div class="col-75">
-        <textarea id="post" name="post" placeholder="Write something.." style="height:200px"></textarea>
+      <div id="menu">
+        <ul>
+          <li>
+            <a accesskey="1" title="" [routerLink]="['/app-home']">Homepage</a>
+          </li>
+          <li>
+            <a accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
+          </li>
+          <li>
+            <a accesskey="3" title="" [routerLink]="['/app-allauthor']">AllAuthor</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="row">
-      <input type="submit" value="SUBMIT" [routerLink]="['/app-home']">
+    <div id="page">
+      <div class="container">
+        <form>
+          <div class="row">
+            <div class="col-25">
+              <label for="name">Name</label>
+            </div>
+            <div class="col-75">
+              <input type="text" id="title" name="title" placeholder="Your Name..">
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-25">
+                <label for="title">Email</label>
+              </div>
+              <div class="col-75">
+                <input type="text" id="title" name="email" placeholder="Your Email..">
+              </div>
+            </div>
+          
+          <br>
+          <div class="row">
+            <input type="submit" value="CREATE" [routerLink]="['/app-home']">
+          </div>
+        </form>
+      </div>
     </div>
-  </form>
-</div>
+    <div id="three-column">
+
+    </div>
+    <div id="footer">
+    </div>
+  </div>
+</body>
+
+</html>
