--- a/src/app/fullpost/fullpost.component.html
+++ b/src/app/fullpost/fullpost.component.html
@@ -1,21 +1,58 @@
-<h2 id="name">Author Name</h2>
-<div class="container">
-  <form>
-    <div class="row">
-      <label id="posttitle">POST TITLE</label>
-      <button class="button button2" [routerLink]="['/all-posts']">ALL POST</button>
-    </div>
-    <div class="row">
-      <div class="col-25">
-        <label for="post">POST</label>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title></title>
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css" />
+
+  <!--[if IE 6]>
+<link href="default_ie6.css" rel="stylesheet" type="text/css" />
+<![endif]-->
+</head>
+
+<body>
+  <div id="wrapper">
+    <div id="header">
+      <div id="logo">
+        <h1>Author Name</h1>
+        <br>
+        <h1>PostTitle</h1>
       </div>
-      <div class="col-75">
-        <label id="post" name="post" style="height:200px">Hiiiii</label>
+      <div id="menu">
+        <ul>
+          <li>
+            <a accesskey="3" title="" [routerLink]="['/all-posts']">AllPost</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="row">
-      <input type="submit" value="COMMENT" routerLink="/comment">
+    <div id="page">
+      <div class="container">
+        <form>
+          <div class="row">
+            <div class="col-25">
+              <label for="post">POST</label>
+            </div>
+            <div class="col-75">
+              <label id="post" name="post" style="height:200px"></label>
+            </div>
+          </div>
+        </form>
+        <router-outlet></router-outlet>
+      </div>
     </div>
-  </form>
-  <router-outlet></router-outlet>
-</div>
+    <div id="three-column">
+      <input type="submit" value="COMMENT" (click)="myFunction()">
+      <div id="comment">
+        <app-comment></app-comment>
+      </div>
+    </div>
+    <div id="footer">
+    </div>
+  </div>
+
+</body>
+
+</html>
