--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,44 @@
-<!-- The content below is only a placeholder and can be replaced.-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title></title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css" />
+</head>
+
 <body>
-<div id="main">
-  <button class="button button1" [routerLink]="['/createpost']">CREATE POST</button>
-  <button class="button button2" [routerLink]="['/app-allauthor']">ALL AUTHOR</button>
-</div>
-<div>
-<mat-card *ngFor="let data of httpdata">
-  <h3 id="title" [routerLink]="['/fullpost']">{{data.id}}.  {{data.title}}</h3>
-  <p id="name">{{data.name}}</p>
-</mat-card>
-</div>
+	<div id="wrapper">
+		<div id="header">
+			<div id="logo">
+				<h1>Communication Management System</h1>
+			</div>
+			<div id="menu">
+				<ul>
+					<li>
+						<a accesskey="1" title="" [routerLink]="['/app-home']">Homepage</a>
+					</li>
+					<li>
+						<a accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
+					</li>
+					<li>
+						<a accesskey="3" title="" [routerLink]="['/app-allauthor']">AllAuthor</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div id="page">
+			<mat-card *ngFor="let data of httpdata">
+				<h2 id="title" [routerLink]="['/fullpost']">{{data.id}}. {{data.title}}</h2>
+			</mat-card>
+		</div>
+		<div id="three-column">
+
+		</div>
+		<div id="footer">
+		</div>
+	</div>
 </body>
+
+</html>
