--- a/src/styles.css
+++ b/src/styles.css
@@ -47,22 +47,6 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-#header {
-    background: #FF3838;
-    padding: 20px 20px;
-    font-size: 1.2em;
-    font-weight: 600;
-}
- .btn {
-    background-color:black;
-    border: none;
-    color:#FF3838;
-    padding: 12px 14px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: -60px;
-}
-
-.btn:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+html{
+    background: #CBBB9A url(./assets/img/main-bg.jpg) repeat;
 }
