--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
 	<div id="wrapper">
 		<div id="header">
 			<div id="logo">
-				<h1>Communication Management System</h1>
+				<h1>Content Management System</h1>
 			</div>
 			<div id="menu">
 				<ul>
