--- a/src/app/comment/comment.component.css
+++ b/src/app/comment/comment.component.css
@@ -1,7 +1,6 @@
 mat-card
 {
 	text-transform: capitalize;
-	font-size: 15px;
 	font-family: 'Oswald', sans-serif;
 	line-height: 1.5;
 }
@@ -14,7 +13,7 @@ mat-card
   .example-full-width {
 	width: 100%;
   }
-  #text{
+  .text1{
       height: 50px;
       border: none;
       border-bottom: 2px solid navy;
@@ -23,4 +22,20 @@ mat-card
       width: 1100px;
       
   }
+  #button {
+    display: block;
+    margin-top: 20px;
+    padding: 7px 20px;
+    background:black;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    float: right;
+    font-family:'Oswald',sans-serif; 
+  }
+  h2{
+    font-size: 15px;
+    color: black;
+  }
+  
   
