--- a/src/app/createpost/createpost.component.html
+++ b/src/app/createpost/createpost.component.html
@@ -21,17 +21,17 @@
       <div id="menu">
         <ul>
           <li>
-            <a accesskey="1" title="" [routerLink]="['/app-home']">Homepage</a>
+            <a class="btn" accesskey="1" title="" [routerLink]="['/app-home']">Homepage</a>
           </li>
           <li>
-            <a accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
+            <a class="btn" accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
           </li>
           <li>
-            <a accesskey="3" title="" [routerLink]="['/app-allauthor']">AllAuthor</a>
+            <a class="btn" accesskey="4" title="" [routerLink]="['/app-createauthor']">CreateAuthor</a>
           </li>
           <li>
-              <a accesskey="4" title="" [routerLink]="['/app-createauthor']">CreateAuthor</a>
-            </li>
+            <a class="btn" accesskey="3" title="" [routerLink]="['/app-allauthor']">AllAuthor</a>
+          </li>
         </ul>
       </div>
     </div>
