--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -159,9 +159,8 @@ hr {
 
 #menu a
 {
+	padding: 14px 16px;
 	display: block;
-	margin-left: 1px;
-	padding: 7px 0px 7px 30px;
 	letter-spacing: 1px;
 	text-decoration: none;
 	text-align: center;
@@ -172,11 +171,17 @@ hr {
 	color: #FFFFFF;
 }
 
-#menu a:hover, #menu .current_page_item a
+#menu .current_page_item a
 {
 	text-decoration: none;
-	border-radius: 5px;
 	color: #FFFFFF;
+	background-color: #2E2E2E;
+}
+#menu a:hover
+{
+	background-color: #2E2E2E;
+	color: #FFFFFF;
+
 }
 
 /** PAGE */
@@ -193,19 +198,6 @@ hr {
 	color: #FFFFFF;
 }
 
-/** CONTENT */
-
-#content {
-	float: left;
-	width: 750px;
-}
-
-/** SIDEBAR */
-
-#sidebar {
-	float: right;
-	width: 300px;
-}
 
 /* Footer */
 
@@ -216,100 +208,12 @@ hr {
 	border-top: 5px solid #000000;
 }
 
-#footer p {
-	text-align: center;
-	font-size: 12px;
-}
-
-#footer a {
-	color: #545454;
-}
-
 /* Three Column */
 
 #three-column {
 	overflow: hidden;
 	margin: 0px 50px;
 	padding: 50px 0px;
-}
-
-#three-column #tbox1 {
-	float: left;
-	width: 400px;
-	margin-right: 50px;
-}
-
-#three-column #tbox2 {
-	float: left;
-	width: 300px;
-}
-
-#three-column #tbox3 {
-	float: right;
-	width: 300px;
-}
-
-/* List Style 1 */
-
-ul.style1 {
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
-}
-
-ul.style1 li {
-	padding: 10px 0px 15px 0px;
-	border-top: 1px solid #E6E7DC;
-}
-
-ul.style1 a {
-	text-decoration: none;
-	color: #545454;
-}
-
-ul.style1 a:hover {
-	text-decoration: underline;
-}
-
-ul.style1 .first {
-	padding-top: 0px;
-	border-top: none;
-}
-
-
-/* List style 2 */
-
-ul.style2 {
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
-}
-
-ul.style2 li {
-	padding: 25px 0px 15px 0px;
-	border-top: 1px solid #525253;
-}
-
-ul.style2 .first {
-	padding-top: 0px;
-	border-top: none;
-}
-
-ul.style2 h3 {
-	padding: 0px 0px 10px 0px;
-}
-
-ul.style2 h3 a {
-	color: #E4E4E6;
-}
-
-ul.style2 a {
-	text-decoration: none;
-	color: #919191;
-}
-
-ul.style2 a:hover {
-	text-decoration: underline;
 }
 
 /* Button Style 1 */
@@ -327,10 +231,6 @@ mat-card
 {
 	cursor: pointer;
 }
-
-
-
-
 
 
 
