--- a/src/app/all-posts/all-posts.component.html
+++ b/src/app/all-posts/all-posts.component.html
@@ -19,6 +19,22 @@
       <div id="logo">
         <h1>{{json?.name}}</h1>
       </div>
+      <div id="menu">
+          <ul>
+            <li>
+              <a accesskey="1" title="" [routerLink]="['/app-home']">Homepage</a>
+            </li>
+            <li>
+              <a accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
+            </li>
+            <li>
+              <a accesskey="4" title="" [routerLink]="['/app-createauthor']">CreateAuthor</a>
+            </li>
+            <li>
+              <a accesskey="3" title="" [routerLink]="['/app-allauthor']">AllAuthor</a>
+            </li>
+          </ul>
+        </div>
     </div>
     <div id="page">
 
