--- a/src/app/allauthor/allauthor.component.css
+++ b/src/app/allauthor/allauthor.component.css
@@ -160,8 +160,7 @@ hr {
 #menu a
 {
 	display: block;
-	margin-left: 1px;
-	padding: 7px 0px 7px 30px;
+	padding: 14px 16px;
 	letter-spacing: 1px;
 	text-decoration: none;
 	text-align: center;
@@ -171,14 +170,18 @@ hr {
 	font-weight: 300;
 	color: #FFFFFF;
 }
-
-#menu a:hover, #menu .current_page_item a
+#menu .current_page_item a
 {
 	text-decoration: none;
-	border-radius: 5px;
+	background-color: #2E2E2E;
 	color: #FFFFFF;
 }
 
+.active,#menu a:hover
+{
+	background-color: #2E2E2E;
+	color: #FFFFFF;
+}
 /** PAGE */
 
 #page {
@@ -327,21 +330,6 @@ mat-card
 {
     cursor: pointer;
 }
-.addbutton
-{
-	background-color: aqua;
-	border: none;
-	border-radius: 50%;
-	float: right;
-	margin: 4px 4px;
-	padding: 20px;
-	font-size: 20px;
-	font-weight:bolder; 
-	margin-top: -50px;
-	height: 60px;
-	width: 60px;
-}
-
 
 
 
