--- a/src/app/createauthor/createauthor.component.html
+++ b/src/app/createauthor/createauthor.component.html
@@ -27,6 +27,9 @@
             <a accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
           </li>
           <li>
+            <a accesskey="4" title="" [routerLink]="['/app-createauthor']">CreateAuthor</a>
+          </li>
+          <li>
             <a accesskey="3" title="" [routerLink]="['/app-allauthor']">AllAuthor</a>
           </li>
         </ul>
