--- a/src/app/createpost/createpost.component.css
+++ b/src/app/createpost/createpost.component.css
@@ -232,8 +232,7 @@ hr {
 #menu a
 {
 	display: block;
-	margin-left: 1px;
-	padding: 7px 0px 7px 30px;
+	padding: 14px 16px;
 	letter-spacing: 1px;
 	text-decoration: none;
 	text-align: center;
@@ -243,11 +242,16 @@ hr {
 	font-weight: 300;
 	color: #FFFFFF;
 }
-
-#menu a:hover, #menu .current_page_item a
+#menu .current_page_item a
 {
 	text-decoration: none;
-	border-radius: 5px;
+	background-color: #2E2E2E;
+	color: #FFFFFF;
+}
+
+.active,#menu a:hover
+{
+	background-color: #2E2E2E;
 	color: #FFFFFF;
 }
 
