--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title></title>
@@ -7,7 +6,6 @@
 	<meta name="description" content="" />
 	<link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
 	<div id="wrapper">
 		<div id="header">
@@ -21,6 +19,9 @@
 					</li>
 					<li>
 						<a accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
+					</li>
+					<li>
+						<a accesskey="3" title="" [routerLink]="['/app-createauthor']">createauthor</a>
 					</li>
 					<li>
 						<a accesskey="3" title="" [routerLink]="['/app-allauthor']">AllAuthor</a>
@@ -40,5 +41,4 @@
 		</div>
 	</div>
 </body>
-
 </html>
