--- a/src/app/fullpost/fullpost.component.html
+++ b/src/app/fullpost/fullpost.component.html
@@ -60,9 +60,9 @@
       <div class="panel">
 
         <div>
-          <mat-card *ngFor="let data of htttpdata">
-            <h3>{{data.name}}</h3>
-            <h2>{{data.body}}</h2>
+          <mat-card *ngFor="let data of httpdata">
+            <h3>{{data?.name}}</h3>
+            <h2>{{data?.body}}</h2>
           </mat-card>
         </div>
         <br/>
