--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 			<div id="menu">
 				<ul>
 					<li>
-						<a accesskey="1" title="" [routerLink]="['/app-home']">Homepage</a>
+						<a accesskey="1" title="" [routerLink]="['/app-home']">Homepage<i class="fa fa-home"></i></a>
 					</li>
 					<li>
 						<a accesskey="2" title="" [routerLink]="['/createpost']">CreatePost</a>
